weitere aenderungen fuer deutsche und lokale nutzung
